# rust-hdfs

./: Cargo.toml  README  build.rs  wrapper.h
src/: hdfs_file.rs  hdfs_fs.rs  hdfs_reader.rs  lib.rs
tmp/: bindings.rs
