[package]
name = "rust-hdfs"
version = "0.1.0"
authors = ["frqc <tanzhenyennn@gmail.com>"]
build = "build.rs"
edition = "2018"
description = "A rust wrapper for hdfs"
license = "Apache-2.0"
keywords = ["hdfs"]
repository = "https://github.com/frqc/rust-hdfs"

[lib]
# workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rand = "0.7.3"

[build-dependencies]
bindgen = "*"
